maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: not found: value Xo
if(aMurNord(Xo,Yo==false)) {
            ^JediEscaper:13: error: not found: value Xo
	setIndication(Xo,Yo-1,1)
                      ^JediEscaper:15: error: not found: value Xo
if(aMurOuest(Xo,Yo==false)) {
             ^JediEscaper:16: error: not found: value Xo
	setIndication(Xo-1,Yo,1)
                      ^JediEscaper:18: error: not found: value aMurSud
if(aMurSud(Xo,Yo==false)) {
   ^JediEscaper:19: error: not found: value Xo
	setIndication(Xo,Yo+1,1)
                      ^JediEscaper:21: error: not found: value aMurEst
if(aMurEst(Xo,Yo==false)) {
   ^JediEscaper:22: error: not found: value Xo
	setIndication(Xo+1,Yo,1)
                      ^